--- a/css/home.css
+++ b/css/home.css
@@ -411,7 +411,7 @@
 
     .hero-btn-container{
         gap: 20px;
-        padding: 0;
+        padding: 20% 10% 20% 10%;
         flex-direction: column;
     }
 
@@ -483,7 +483,7 @@
     /*Schedule a Consulation Today -- Mobile*/
      .consultation-content {
         width: 100%; 
-        
+        padding: 10% 0;
      }
 
      .consultation-btn {
