--- a/css/whysummit.css
+++ b/css/whysummit.css
@@ -242,10 +242,27 @@
 
 /*Mobile Layout*/
 @media screen and (max-width: 700px) {
+
+    /* Why Summit? Hero Section -- Mobile */
+    .whysummit-hero {
+        padding-top: 30%;
+    }
+
+    .hero-btn-container {
+        gap: 20px;
+        padding: 20% 10% 30% 10%;
+       
+    }
+
+    .whysummit-hero-btn {
+        padding: 15px 18px;
+        font-size: 1.4rem;
+    }
     
     /*Why Summit? It all starts with Security --Mobile*/
     .whysummit-card {
         border-radius: 20px;
+        margin: 10% 0;
     }
 
 
